--- a/pom.xml
+++ b/pom.xml
@@ -386,7 +386,7 @@
                 <artifactId>apache-rat-plugin</artifactId>
                 <executions>
                     <execution>
-                        <phase>verify</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
