--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
     </organization>
 
     <properties>
-        <struts2.springPlatformVersion>3.0.5.RELEASE</struts2.springPlatformVersion>
+        <spring.platformVersion>4.3.13.RELEASE</spring.platformVersion>
         <ognl.version>3.1.17</ognl.version>
         <asm.version>5.2</asm.version>
         <tiles.version>2.2.2</tiles.version>
@@ -748,47 +748,47 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc-portlet</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aop</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aspects</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-beans</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>${struts2.springPlatformVersion}</version>
+                <version>${spring.platformVersion}</version>
             </dependency>
 
             <dependency>
