Upgrade DWR from 1.x to 2.x - intended to resolve Jenkins build failure with old DWR version.
pom.xml changes:
- entry change in struts2-parent pom.xml
  - upgrade 1.1.1 (uk.ltd.getahead) -> 2.0.11-RELEASE (org.directwebremoting)
- entry change in struts2-dwr-plugin pom.xml
- entry change in struts2-showcase pom.xml

--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -133,7 +133,7 @@
             <artifactId>sitemesh</artifactId>
         </dependency>
         <dependency>
-            <groupId>uk.ltd.getahead</groupId>
+            <groupId>org.directwebremoting</groupId>
             <artifactId>dwr</artifactId>
         </dependency>
         <dependency>
