--- a/pom.xml
+++ b/pom.xml
@@ -648,9 +648,9 @@
             </dependency>
 
             <dependency>
-                <groupId>uk.ltd.getahead</groupId>
+                <groupId>org.directwebremoting</groupId>
                 <artifactId>dwr</artifactId>
-                <version>1.1.1</version>
+                <version>2.0.11-RELEASE</version>
             </dependency>
 
             <dependency>
