--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,14 @@
         </notifiers>
     </ciManagement>
 
+    <distributionManagement>
+        <site>
+            <id>struts-stage</id>
+            <name>Apache Struts</name>
+            <url>file://${project.build.directory}/staging/</url>
+        </site>
+    </distributionManagement>
+
     <modules>
         <module>bom</module>
         <module>core</module>
