--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.outputTimestamp>now</project.build.outputTimestamp>
         <java.version>1.8</java.version>
 
         <!-- dependency versions in alphanumeric order -->
@@ -404,6 +405,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <!-- See https://issues.apache.org/jira/browse/MRELEASE-1029 -->
+                <version>3.0.0-M1</version>
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
