--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.outputTimestamp>now</project.build.outputTimestamp>
+
+        <!-- Dependencies -->
         <ognl.version>3.1.28</ognl.version>
         <spring.platformVersion>4.3.26.RELEASE</spring.platformVersion>
         <asm.version>7.3.1</asm.version>
@@ -206,18 +209,6 @@
                         <groupId>org.eluder.coveralls</groupId>
                         <artifactId>coveralls-maven-plugin</artifactId>
                         <version>4.3.0</version>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>update-impact</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.updateimpact</groupId>
-                        <artifactId>updateimpact-maven-plugin</artifactId>
-                        <version>1.0.12</version>
                     </plugin>
                 </plugins>
             </build>
@@ -354,6 +345,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <!-- See https://issues.apache.org/jira/browse/MRELEASE-1029 -->
+                <version>3.0.0-M1</version>
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
