--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.outputTimestamp>now</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2020-07-11T19:40:00Z</project.build.outputTimestamp>
         <java.version>1.8</java.version>
 
         <!-- dependency versions in alphanumeric order -->
