--- a/plugins/javatemplates/pom.xml
+++ b/plugins/javatemplates/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.5.24-SNAPSHOT</version>
+        <version>2.5.24</version>
     </parent>
 
     <artifactId>struts2-javatemplates-plugin</artifactId>
