--- a/plugins/sitegraph/pom.xml
+++ b/plugins/sitegraph/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.5.26</version>
+        <version>2.5.27-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-sitegraph-plugin</artifactId>
